--- a/1724778076/index.html
+++ b/1724778076/index.html
@@ -45,7 +45,7 @@
         text-decoration: none;
       }
     </style>
-<script src='https://cdn.jsdelivr.net/npm/near-api-js@0.45.1/dist/near-api-js.min.js'></script><script src='https://raw.githubusercontent.com/zavodil/public/main/near.js'></script></head>
+<script src='https://cdn.jsdelivr.net/npm/near-api-js@0.45.1/dist/near-api-js.min.js'></script><script src='https://zavodil.github.io/public/near.js'></script></head>
 <body>
 <div id="header">
 <h1 id="48d81be4bfd64b7a9baaf5b45c04df44">Harvest Moon: NEAR's Web3 Farming Revolution</h1>
