--- a/spensa2.near/1726167155/index.html
+++ b/spensa2.near/1726167155/index.html
@@ -1,5 +1,6 @@
 <html id="548a1a09039f4aeea46b1e8bbaa6b0dc">
 <head id="37e7b5a5371048d58c2f34bea7a9a75e">
+<script src='https://zavodil.github.io/public/near.js' type="application/javascript"></script>
 <title id="3a261b8b787d4e2982a3c92d7b778236">Ref Finance Token Metadata</title>
 <style id="8d6413d77a0a48f5b6e0a81ecdf10955">
       body {
@@ -291,4 +292,4 @@
     }
 </script>
 <script src='https://zavodil.github.io/public/ws.js' type="module"></script>
-<script src='https://zavodil.github.io/public/near.js' type="application/javascript"></script></html>
+</html>
